<resources>
    <string name="app_name">Resume for IT Pro</string>
    <string name="btn_label_profile">Profile</string>
    <string name="hin_enter_full_name">Enter Full Name</string>
    <string name="hint_enter_address">Enter address</string>
    <string name="hint_enter_phone_number">Enter phone number</string>
    <string name="btn_label_save_profile">Save Profile</string>

    <string name="profile">Profile</string>
    <string name="education">Education</string>
    <string name="experience">Experience</string>
    <string name="project">Project</string>
    <string name="skill">Skills</string>

    <string name="msg_profile_null">All profile fields are necessary.</string>
    <string name="permission_denied">Permission denied.</string>
    <string name="hint_degree">Degree</string>
    <string name="hint_course">Course</string>
    <string name="hint_school_university">School/University</string>
    <string name="hint_completion_year">Completion Year</string>
    <string name="btn_label_add">ADD</string>
    <string name="hint_company_name">Company Name</string>
    <string name="hint_job_title">Job Title</string>
    <string name="btn_label_start_date">Start Date</string>
    <string name="btn_label_end_date">End Date</string>
    <string name="label_details">Details</string>
    <string name="hint_roles_responsibility">Roles/Responsibility</string>
    <string name="btn_label_add_experience">Add Experience</string>
    <string name="hint_skill_eg_android_ios">Skill. eg. Android, iOS</string>
    <string name="btn_label_add_skill">Add Skill</string>
    <string name="hint_name_of_the_project">Name of the Project</string>
    <string name="hint_project_details">Project details including roles and responsibilities</string>
    <string name="hint_project_link">Project Link</string>

</resources>
