<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/_16dp"
    tools:context=".ui.education.EducationActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/_0dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@id/btn_add"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <EditText
            android:id="@+id/text_degree"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_degree" />

        <EditText
            android:id="@+id/text_course"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_course" />

        <EditText
            android:id="@+id/text_university"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_school_university" />

        <EditText
            android:id="@+id/text_completion_year"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_completion_year" />

    </LinearLayout>

    <Button
        android:id="@+id/btn_add"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_label_add"
        android:textAllCaps="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>